# noi_train

./: .gitignore  README.md  arbiter使用.md
concept/DynamicProgramming/: CMakeLists.txt  coins.cpp  coins_recurive.cpp  fibonacci.cpp  fibonacci_recursive.cpp  lis.cpp  lis_recursive.cpp  readme.md
noi200004/: 4darray.cpp  CMakeLists.txt  gird_digital_fix.cpp  grid_digital.cpp  readme.md  解题思路.md
noi20160102/: CMakeLists.txt  data.in  main.cpp  readme.md  思路.md
